tests/templates/function/compile_fail/missing_assert.rs
use pre::pre;

#[pre("must be bar")]
fn foo() {}

#[pre]
fn main() {
    foo()
}
